[package]
name = "blog-dapp"
version = "0.3.0"
description = "Created by M4ert"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blog_dapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"